    * hyperv: Added a check for checking state changes.
    * df / esx_vsphere_datastore: filesystem levels configuration gets even easier
                                  now able to set absolute levels and levels depending
                                  on total disk space
    * cisco_wlc: New check for monitoring cisco wireless lan access points 

    Notifications:
    * notify.py: Matching service level: Use the hosts service level if a
                 service has no service level set
    * notify.py: fixed bug with local notification spooling

    Multisite:
    * User accounts can now be locked after a specified amount of auth
      failures (lock_on_logon_failures can be set to a number of tries)
    * Column Perf-O-Meter is now sortable: it sorts after the *first*
      performance value. This might not always be the one you like, but
      its far better than nothing.
    * logwatch: Logwatch icon no longer uses notes_url
    * check_mk-if.pnp: fixed bug with pnp template on esx hosts without perfdata
    * Inventory screen: Host inventory also displays its clustered services
    * Rules: Renamed "Ignored services" to "Disabled services"
             Renamed "Ignored checks" to "Disabled checks"
    * Sorter Host IP address: fixed sorting, no longer uses str compare on ip
    * Views: New: Draw rule editor icon in multisite views (default off)
             Can be activated in global settings
    * New global multisite options: Adhoc downtime with duration and comment
                                    Display current date in dashboard
    * LDAP: Using asynchronous searches / added optional support for paginated
      searches (Can be enabled in connection settings)
    * LDAP: It is now possible to provide multiple failover servers, which are
      tried when the primary ldap server fails
    * LDAP: Supporting posixGroup with memberUid as member attribute
    * LDAP: Added filter_group option to user configuration to make the