@@ -1,0 +1,23 @@
+title: Numer of Wifi connections for Cisco WLC
+agents: snmp
+catalog: hw/network/cisco
+license: GPL
+distribution: check_mk
+description:
+ This checks display the amount of connected clients in an wireless network.
+ Per default the check only displays the information for each network, and also one
+ summary. Levels can be set for each network via Wato.
+
+item:
+ Name of the wifi, configured in Cisco's WLC Software or "Summary" for the overall number
+ of clients
+
+perfdata:
+ One variable: the current number of clients
+
+inventory:
+ One check for each wifi network, and one summary check will be created
+
+[parameters]
+warn(int): Optional warning level for the number of clients
+crit(int): Critical level for the number of clients
